2004-09-02  Andrew Cagney  <cagney@gnu.org>

	* gdbarch.sh: Delete check for consistency between GDB_MULTI_ARCH
	and GDB_TM_FILE.  Check for GDB_TM_FILE instead of
	GDB_MULTI_ARCH_PARTIAL.
	* gdbarch.h: Re-generate.
	
	* config/sparc/tm-vxworks.h (GDB_MULTI_ARCH): Delete.
	* config/sparc/tm-sol2.h (GDB_MULTI_ARCH): Delete.
	* config/sparc/tm-nbsd.h (GDB_MULTI_ARCH): Delete.
	* config/sparc/tm-linux.h (GDB_MULTI_ARCH): Delete.
	* config/sparc/tm-fbsd.h (GDB_MULTI_ARCH): Delete.
	* config/sh/tm-sh.h (GDB_MULTI_ARCH): Delete.
	* config/rs6000/tm-rs6000.h (GDB_MULTI_ARCH): Delete.
	* config/pa/tm-hppa.h (GDB_MULTI_ARCH): Delete.
	* config/mips/tm-mips.h (GDB_MULTI_ARCH): Delete.
	* config/ia64/tm-ia64.h (GDB_MULTI_ARCH): Delete.
	* config/cris/tm-cris.h (GDB_MULTI_ARCH): Delete.
	* config/arm/tm-arm.h (GDB_MULTI_ARCH): Delete.

2004-09-01  Andrew Cagney  <cagney@gnu.org>

	* objfiles.h (struct entry_info): Delete fields main_func_lowpc
	and main_func_highpc.
	(INVALID_ENTRY_LOWPC, INVALID_ENTRY_HIGHPC): Delete macros.
	* objfiles.c (init_entry_point_info, objfile_relocate): Update
	* nlmread.c (nlm_symfile_read): Update.

2004-09-01  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c (linked_proc_desc_table): Delete, not used.
	(mips_insn32_frame_cache): Inline call to find_proc_desc.
	(find_proc_desc): Remove dead code.

2004-09-01  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c (mips_mdebug_frame_cache): Minor reformatting.

2004-09-01  Jeff Johnston  <jjohnstn@redhat.com>

	* observer.sh: Add struct so_list declaration.
	* Makefile.in: Add dependencies on observer.h for solib.c and
	breakpoint.c.
	* breakpoint.c (disable_breakpoints_in_unloaded_shlib): New
	function.
	(_initialize_breakpoint): Register 
	disable_breakpoints_in_unloaded_shlib as an observer of the 
        "solib unloaded" observation event.
	(re_enable_breakpoints_in_shlibs): For bp_shlib_disabled breakpoints,
	call decode_line_1 so unfound breakpoint errors are silent.